# TERTIS-Game-in-C

./: README.md
TETRIS/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Demo.elf  Makefile  cmake_install.cmake
TETRIS/.metadata/: version.ini
TETRIS/.metadata/.plugins/org.eclipse.cdt.core/: BSP.1496236158881.pdom  CMSISv2p00_LPC11xx.1496236158826.pdom  FreeRTOS-Simple-Demo.1496236158945.pdom  FreeRTOS.1496236158875.pdom  FreeRTOS_Demo.1496236158966.pdom  FreeRTOS_UDP_Demo.1496236158984.pdom  RTOSDemo.1496236158977.pdom  RTOSDemo_A53.1496236159009.pdom  RTOSDemo_A53_bsp.1496236159002.pdom  RTOSDemo_GCC.1496236159030.pdom  RTOSDemo_Hardware_Platform.1496236158841.pdom  RTOSDemo_R5.1496236158905.pdom  RTOSDemo_R5_bsp.1496236159014.pdom  RTOSDemo_RDB1768.1496236158935.pdom  RTOSDemo_Renesas.1496236159045.pdom  RTOSDemo_bsp.1496236159065.pdom
TETRIS/.metadata/.plugins/org.eclipse.cdt.make.core/: RTOSDemo_Hardware_Platform.sc
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/BSP/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/BSP/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/CMSISv2p00_LPC11xx/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/CMSISv2p00_LPC11xx/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/CORTEX-R4_TI_CCS5/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/CORTEX-R4_TI_CCS5/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS-Simple-Demo/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS-Simple-Demo/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS_Demo/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS_Demo/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS_UDP_Demo/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/FreeRTOS_UDP_Demo/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/Hardware/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_A53/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_A53/.indexes/: properties.index
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_A53_bsp/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_GCC/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_Hardware_Platform/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_R5/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_R5_bsp/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_RDB1768/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_Renesas/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_bsp/: .location  .markers
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/RTOSDemo_syslib/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/ZC702_hw_platform/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.projects/ZynqMP_ZCU102_hw_platform/: .location
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
TETRIS/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
TETRIS/.metadata/.plugins/org.eclipse.debug.core/.launches/: Demo_Demo_STM_CMAKE Configuration.launch  code (2).launch
TETRIS/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
TETRIS/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
TETRIS/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
TETRIS/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache/: segments_1
TETRIS/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
TETRIS/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_1
TETRIS/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.tueircs-ldb13_0/: node.properties
TETRIS/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
TETRIS/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
TETRIS/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
TETRIS/code/: Demo.c  Demo.h
TETRIS/include/: gfxconf.h
(+24 files in other folders)
